--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,17 @@ body {
 	line-height: 1.2;
 	color: #484848;
 }
+/* показати/сховати текст завдань */
+.hidden-text {
+	display: none;
+	margin-top: 10px;
+}
+
+.toggle-hidden-text {
+	color: #2a61d8;
+	/* text-decoration: underline; */
+	cursor: pointer;
+}
 
 /* Контент табів */
 
@@ -273,4 +284,39 @@ span::after {
 	.tabs__text {
 		line-height: 1.4;
 	}
+}
+
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
+th,
+td {
+	padding: 8px;
+	border: 1px solid #ddd;
+	text-align: left;
+}
+th {
+	background-color: #f2f2f2;
+}
+input[type='text'] {
+	width: 100%;
+	padding: 8px;
+	box-sizing: border-box;
+}
+#sortButton {
+	background: none;
+	border: none;
+	cursor: pointer;
+	font-size: 18px;
+	padding: 0;
+	margin-left: 10px;
+}
+
+#sortButton:focus {
+	outline: none;
+}
+
+#sortIcon {
+	font-size: 18px;
 }
