--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,13 @@
 
 body {
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	flex-direction: column;
 	min-height: 100vh;
 	font-family: Montserrat;
 	background: #f3f4fb;
+	margin-top: 20px;
 }
 
 /* 
@@ -96,6 +97,8 @@ span::after {
 /* Текст у табах */
 .tabs__content p {
 	margin-top: 0px;
+	margin-bottom: 20px;
+
 	font-size: 14px;
 	line-height: 1.6;
 	color: #484848;
@@ -130,7 +133,7 @@ select {
 	border: 1px solid #ddd;
 	border-radius: 10px;
 	font-size: 14px;
-	margin-bottom: 15px;
+	margin-bottom: 20px;
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05);
 	transition: 0.3s;
 }
@@ -161,6 +164,7 @@ select:focus {
 	cursor: pointer;
 	transition: background-color 0.3s, color 0.3s;
 	color: #ddd;
+	margin-bottom: 10px;
 }
 
 .custom-checkbox.active {
@@ -186,7 +190,7 @@ select:focus {
 	border-radius: 20px;
 	cursor: pointer;
 	transition: 0.3s;
-	margin-top: 20px;
+	/* margin-top: 15px; */
 	margin-bottom: 20px;
 }
 
@@ -246,6 +250,7 @@ select:focus {
 	padding: 0;
 	text-decoration: underline;
 	transition: 0.3s;
+	margin-top: 16px;
 }
 
 .clear-button-text:hover {
@@ -262,7 +267,7 @@ select:focus {
 	border-radius: 20px;
 	cursor: pointer;
 	transition: 0.3s;
-	margin-top: 20px;
+	margin-top: 10px;
 	margin-bottom: 20px;
 }
 .holidays-button:disabled {
@@ -271,6 +276,67 @@ select:focus {
 	cursor: not-allowed;
 }
 
+/* Таблиця */
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+th,
+td {
+	padding: 10px;
+	text-align: left;
+	font-size: 14px;
+}
+
+th {
+	background: none;
+	font-weight: 600;
+	color: #2a61d8;
+}
+
+td {
+	padding-top: 14px;
+	padding-bottom: 14px;
+
+	background: none;
+}
+td:last-child {
+	font-weight: 500;
+}
+tr {
+	border-bottom: 1px solid #ddd;
+}
+
+tr:hover {
+	background-color: #f1f5fa;
+	border-radius: 20px;
+}
+/* Кнопка Сортування */
+#sort-button {
+	background: none;
+	border: none;
+	cursor: pointer;
+	font-size: 16px;
+	padding: 0;
+	margin-left: 10px;
+	justify-content: center;
+	align-items: center;
+}
+
+#sort-button:focus {
+	outline: none;
+}
+
+#sort-icon {
+	align-items: center;
+}
+
+input[type='text'] {
+	width: 100%;
+	padding: 10px;
+	box-sizing: border-box;
+}
 /*--- Адаптивність ---*/
 @media (max-width: 768px) {
 	.tabs__title {
@@ -298,39 +364,4 @@ select:focus {
 	.tabs__text {
 		line-height: 1.4;
 	}
-}
-
-table {
-	width: 100%;
-	border-collapse: collapse;
-}
-th,
-td {
-	padding: 8px;
-	border: 1px solid #ddd;
-	text-align: left;
-}
-th {
-	background-color: #f2f2f2;
-}
-input[type='text'] {
-	width: 100%;
-	padding: 10px;
-	box-sizing: border-box;
-}
-#sortButton {
-	background: none;
-	border: none;
-	cursor: pointer;
-	font-size: 18px;
-	padding: 0;
-	margin-left: 10px;
-}
-
-#sortButton:focus {
-	outline: none;
-}
-
-#sortIcon {
-	font-size: 18px;
 }
